--- a/single-post-view/index.html
+++ b/single-post-view/index.html
@@ -110,7 +110,15 @@
                     </div>
                 </div>
             </header>
-            <h1>HEADING</h1>
+            <div class="alert">
+                <h3>Warning message!</h3>
+                <span>
+                    If you violate our guidelines again, your account may be
+                    deleted, including your posts and comments.
+                </span>
+                <i class="fa-regular fa-circle-xmark close"></i>
+            </div>
+            <h1>The influence of social medias</h1>
             <article id="post">
                 <section id="content">
                     <div class="header">
